--- a/core/app/views/aside.html
+++ b/core/app/views/aside.html
@@ -9,6 +9,9 @@
   <div class="tab-content">
     <!-- Home tab content -->
     <div class="tab-pane active" id="control-sidebar-home-tab">
+
+
+
       <h3 class="control-sidebar-heading">Recent Activity</h3>
       <ul class="control-sidebar-menu">
         <li>
@@ -63,6 +66,15 @@
           <p>
             Some information about this general settings option
           </p>
+
+
+        #{power.ck "project.change"}
+          <select class="inline" style="width:100px;margin-top:6px;height:30px;" id="changeProject">
+              #{list items:models.User.COR.values(), as:'c'}
+                <option value="${c.url()}" #{if c.name()==models.OperatorConfig.getVal("brandname") } selected#{/if}>${c.label()}</option>
+              #{/list}
+          </select>
+        #{/power.ck}
         </div>
         <!-- /.form-group -->
       </form>
