物料出货单页面增加收货供应商为空判断

--- a/core/app/views/MaterialPlans/show.html
+++ b/core/app/views/MaterialPlans/show.html
@@ -76,7 +76,7 @@
               </select>
             #{/if}
               #{else }
-                <input type="text" value="${dp.receiveCooperator.name}" readonly>
+                <input type="text" value="${dp.receiveCooperator?.name}" readonly>
               #{/else}
             </td>
           </tr>
