--- a/core/app/views/Users/index.html
+++ b/core/app/views/Users/index.html
@@ -19,7 +19,7 @@
               <div class="input-group">
                 <div class="input-group-addon">用户名</div>
                 <input style="width:200px;" class="form-control" name="p.search" value="${p.search}" placeHolder="用户名">
-                <input type="hidden" name="p.page">
+                <input type="hidden" name="p.page" value="${p.page}">
               </div>
               <div class="form-group">
                 <div class="form-group">
