--- a/core/app/views/_js_header_v3.html
+++ b/core/app/views/_js_header_v3.html
@@ -2,7 +2,9 @@
 #{script 'bootstrap3/bootstrap.min.js'/}
 #{script 'bootstrap3/bootstrap3-typeahead.js'/}
 #{script 'bootstrap3/app.js'/}
+#{script 'bootstrap3/fastclick.js'/}
 #{script 'bootstrap3/bootstrap-datepicker.js'/}
+#{script 'bootstrap3/demo.js'/}
 #{script 'noty/jquery.noty.js'/}
 #{script 'noty/themes/default.js'/}
 #{script 'noty/layouts/top.js'/}
