采购单页面样式调整

--- a/core/app/views/Sellings/index.html
+++ b/core/app/views/Sellings/index.html
@@ -68,7 +68,7 @@
               <input class="form-control" style="width:200px;" name="p.keywords" value="${p.keywords}" placeHolder="sellingID/SKU/ASIN"/>
               <input type="hidden" name="p.page" value="${p.page}">
             </div>
-            <button class="btn btn-primary" data-loading-text="提交中...">搜索</button>
+            <button class="btn btn-primary" data-loading="提交中...">搜索</button>
             <a href="@{Sellings.createSelling()}" class="btn btn-success">创建Selling</a>
             <a href="javascript:void(0);" id="batchDown" data-uri="" class="btn btn-warning">批量系统内下架</a>
 
