--- a/core/app/views/_js_header_v3.html
+++ b/core/app/views/_js_header_v3.html
@@ -13,3 +13,6 @@
 #{script 'jquery.loadmask.min.js'/}
 #{script 'main.js'/}
 #{script 'jquery.form.js'/}
+#{script 'component/notify.coffee'/}
+#{script 'component/popover.coffee'/}
+#{script 'bootstrap3/init.es6'/}
