--- a/core/app/views/_css_header_v3.html
+++ b/core/app/views/_css_header_v3.html
@@ -5,4 +5,4 @@
 #{stylesheet 'jquery.loadmask.css'/}
 #{stylesheet 'bootstrap3/datepicker3.css'/}
 #{stylesheet 'bootstrap3/skins/_all-skins.css'/}
-#{stylesheet 'main.css'/}
+#{stylesheet 'bootstrap3/main.css'/}
