--- a/core/app/views/Products/index.html
+++ b/core/app/views/Products/index.html
@@ -1,4 +1,4 @@
-#{extends 'main_full.html' /}
+#{extends 'main_full_v3.html' /}
 #{set title:'Product' /}
 #{set 'moreStyles'}
     #{stylesheet 'bootstrap-multiselect.css'/}
@@ -15,53 +15,164 @@
   }
 </style>
 
-<div style="margin:5px 0 0;" class="row">
 #{flash_alert /}
 #{errorMsgs /}
-</div>
 
-<div class="row-fluid">
-  <form action="#" method="post" class="search_form">
-    <div class="span12">
-      <select name="p.state" class="span1 inline">
-      #{list items:['Active', 'Inactive'], as:'s'}
-        <option ${s == p.state ? 'selected' : ''} value="${s}">${s}</option>
-      #{/list}
-      </select>
+<div class="row">
+  <div class="col-md-12">
+    <div class="box box-primary">
+      <div class="box-header with-border">
+        <form action="@{Products.index()}" method="post" class="form-inline">
+          <div class="row-fluid">
+            <select name="p.state" class="form-control" style="width: 100px;">
+            #{list items:['Active', 'Inactive'], as:'s'}
+              <option ${s == p.state ? 'selected' : ''} value="${s}">${s}</option>
+            #{/list}
+            </select>
 
-      <div class="input-prepend inline">
-        <select name="p.categories" multiple="multiple" id="categories">
-        #{list items:categoryIds, as:'c'}
-          <option value="${c}" ${p.categories.contains(c) ? 'selected':''}>${c}</option>
-        #{/list}
-        </select>
+            <select name="p.categories" multiple="multiple" id="categories" class="form-control">
+            #{list items:categoryIds, as:'c'}
+              <option value="${c}" ${p.categories.contains(c) ? 'selected':''}>${c}</option>
+            #{/list}
+            </select>
+
+            <label class="checkbox inline">
+              <input type="checkbox" name="p.scope" value="true"#{if p.scope} checked #{/if}> 全局搜索
+            </label>
+
+            <div class="input-group">
+              <div class="input-group-addon"><i class="icon-search"></i></div>
+              <input style="width:200px;" class="form-control" name="p.search" placeHolder="搜索 SKU、附加属性、条码" value="${p.search}">
+              <input type="hidden" name="p.page" value="${p.page}">
+            </div>
+
+            <button class="btn btn-primary" data-loading>搜索</button>
+
+            <a href="javascript:void(0)" data-href="@{Excels.exportProductDetailToExcel()}" class="btn btn-success"
+               target="_blank" id="downloadBtn" content="按照搜索条件导出 Product 基本信息到 Excel" placement='bottom' rel="popover">
+              <i class="icon-download-alt"></i>下载 Excel
+            </a>
+          #{power.ck "products.edit"}
+            <a href="@{Products.blank()}" class="btn btn-warning" target="_blank">添加新产品</a>
+          #{/power.ck}
+          </div>
+        </form>
       </div>
 
-      <label class="checkbox inline">
-        <input type="checkbox" name="p.scope" value="true"#{if p.scope} checked #{/if}> 全局搜索
-      </label>
-
-      <div class="input-prepend input-append inline">
-        <span class="add-on"><i class="icon-search"></i></span>
-        <input type="hidden" name="p.page" value="${p.page}">
-        <input type="text" autocomplete="off" name="p.search" value="${p.search}" style="width:172px;" placeHolder="搜索 SKU、附加属性、条码">
-        <a href="javascript:void(0)" data-href="@{Products.index()}" class="btn btn-primary" id="searchBtn"
-           data-loading>搜索</a>
+      <div class="box-body">
+      #{render 'Products/_products.html', prods:prods, pi:p,products:products,families:families/}
       </div>
-      <div class="inline">
-        <a href="javascript:void(0)" data-href="@{Excels.exportProductDetailToExcel()}" class="btn btn-primary"
-           target="_blank" id="downloadBtn" content="按照搜索条件导出 Product 基本信息到 Excel" placement='bottom' rel="popover">
-          <i class="icon-download-alt"></i>下载 Excel
-        </a>
-      #{power.ck "products.edit"}
-        <a href="@{Products.blank()}" class="btn btn-success" target="_blank">添加新产品</a>
-      #{/power.ck}
+
+      <div class="box-footer">
+      #{bootstrap_pager_v3 pi:p, url:'/products/index'/}
       </div>
     </div>
-  </form>
+    
+  #{records_v3 records:records/}
+  </div>
 </div>
 
-<div id="prod_list">
-#{render 'Products/_products.html', prods:prods, pi:p,products:products,families:families/}
+<div id="copy_modal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3>同步SKU</h3>
+      </div>
+      <div class="modal-body">
+        <form action="@{Products.copy()}" id="update_form" class="form-horizontal">
+          <div class="form-group">
+            <label class="col-sm-3 control-label">选择SKU</label>
+            <div class="col-sm-9">
+              <input type="text" autocomplete="off" data-provide="typeahead" data-items="5" data-source="${products}"
+                     name="skuid" value="" style="width:250px;" placeHolder="搜索 SKU" class="form-control">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-3 control-label">选择同步的信息</label>
+            <div class="col-sm-9">
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" name="base" value="1" checked>基本属性
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-offset-3 col-sm-9">
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" name="extend" value="1" checked>扩展属性
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-offset-3 col-sm-9">
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" name="attach" value="1" checked>附件
+                </label>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+        <button class="btn btn-primary">同步</button>
+      </div>
+    </div>
+  </div>
 </div>
-#{records records:records, row:true/}
+
+<div id="backup_modal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3>复制SKU</h3>
+      </div>
+      <div class="modal-body">
+      #{form @Products.backup(), id:'update_form'}
+        <input type="hidden" id="backup_choseid" name="choseid" value="0">
+
+        <tr>
+          <th>Family</th>
+          <td>
+            <input style="width:150px" id="back_families" type="text" name="family" data-provide="typeahead"
+                   data-source="${families}" value="" autocomplete="off">
+          </td>
+          <th>SKU</th>
+          <td><input style="width:200px" id="back_sku" type="text" name="sku" value="" autocomplete="off"></td>
+        </tr>
+        <dl class="dl-horizontal">
+          <dt>选择复制的信息:</dt>
+          <dd>
+            <label class="checkbox">
+              <input disabled type="checkbox" name="base" value="1" checked>
+              <a>基本属性</a>
+            </label>
+            <label class="checkbox">
+              <input type="checkbox" name="extend" value="1" checked>
+              <a>扩展属性</a>
+            </label>
+            <label class="checkbox">
+              <input type="checkbox" name="attach" value="1" checked>
+              <a>附件</a>
+            </label>
+          </dd>
+        </dl>
+      #{/form}
+      </div>
+      <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+        <button class="btn btn-primary">复制</button>
+      </div>
+    </div>
+  </div>
+</div>
+#{include 'Products/_destroyLogForm.html'/}
+
+
+
