--- a/core/app/views/Users/create.html
+++ b/core/app/views/Users/create.html
@@ -103,6 +103,25 @@
               </div>
             </div>
           </div>
+
+          <div class="row-fluid">
+            <div class="col-lg-6">
+              <div class="form-group">
+                <label class="col-sm-2 control-label">性别</label>
+                <select name="user.sex" class="form-control" style="width:200px;">
+                  <option value="male">男</option>
+                  <option value="female">女</option>
+                </select>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="form-group">
+                <label class="col-sm-2 control-label">入职日期</label>
+                <input style="width:200px;" class="form-control" id="date_from" value="${entryDate.date()}" name="user.entryDate">
+              </div>
+            </div>
+          </div>
+
         </div>
 
         <div class="box-footer clearfix">
